# ApplyPilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .railwayignore  Dockerfile  Invoke-FleetMakeCurrent.ps1  Invoke-FleetReconcile.ps1  README.md  backup-brain.ps1  backup-fleet-pg.ps1  bootstrap-m2.bat  bootstrap-m4.bat  bridge-resbuild.ps1  check-fleet-ready.ps1  check-tarpon-discovery.ps1  com.applypilot.fleetworker.plist.template  fleet-agent-query.py  fleet-agent-update-gate.py  fleet-agent-version.py  fleet-agent.ps1  fleet-blackout-query.py  fleet-daily-unguard.ps1  fleet-health.ps1  fleet-secret.py  fleet-status.py  fleet_agent_env.py  hydrate-gmail.py  keepalive-apply.ps1  load-canary-home.ps1  load-canary-remote.ps1  pyproject.toml  register-apply-cycle.ps1  register-discover-score.ps1  register-fleet-crash-liveness.ps1  register-fleet-tasks.ps1  register-keepalive.ps1  register-otp-responder-startup.ps1  rescore-desc-cut.py  run-applypilot-sales.ps1  (+26 more)
.applypilot/: job_knowledge_graph_prompt.md  job_knowledge_graph_prompt.md.bak-20260704
.staging-evidence/: bootstrap-v2-receipt.json  bootstrap-v2-rollback.sql  worker-v2-inventory.json  worker-v2-rollback.sql
applypilot-webdriver-cost-research/: fields.yaml  generate_report.py  outline.yaml  report.md
deploy/: entrypoint.sh  litellm_config.yaml
docs/: applypilot-local-inference-benchmark-2026-07-10.md  artifact-authority-v7-provisioning.md  auth-gated-tenant-runbook.md  autonomous-apply-runbook.md  canonical-decision-policy-runbook.md  challenge-triage-runbook.md  fleet-apply-lane-runbook.md  fleet-autotriage-review.md  fleet-codex-bridge-runbook.md  fleet-console-operations-runbook.md  fleet-linkedin-lane-runbook.md  fleet-mac-worker-runbook.md  fleet-otp-relay-runbook.md  imap-gmail-runbook.md  railway-canonical-worker-deployment.md  railway-staging-canary-cutover-checklist.md  resbuild-bridge-runbook.md  system-audit-2026-07-02.md
scripts/: New-PhaseASignedReceipt.ps1  PhaseAEvidenceStore.psm1  PhaseAWindowsFile.psm1  backup-railway-postgres.ps1  bootstrap-fleet-pg-roles.py  brain-sqlite-to-postgres.py  build-compatibility-manifest.py  emergency-contain-legacy-authority.ps1  provision-phase-a-evidence-store.ps1  register-brain-artifact-authority.py  release_evidence_common.py  rollback-fleet-pg-role.py  run-canonical-outcomes-review.ps1  setup-fleet-pg-tailscale.ps1  setup-fleet-worker.ps1  sign-release-attestation.py  upgrade-brain-authority-existing-topology.py
tests/: conftest.py  test_a1_apply_admission_gates.py  test_acquisition_entrypoint_guards.py  test_agent_budget.py  test_agent_readiness.py  test_agent_switch.py  test_aggregator_resolver.py  test_analytics.py  test_answer_exceptions.py  test_answerer.py  test_apply_agent_selection.py  test_apply_attempts.py  test_apply_auth_gated_cli.py  test_apply_auth_gated_tenant.py  test_apply_auth_required.py  test_apply_channel.py  test_apply_cost_report_cli.py  test_apply_cycle_fail_closed.py  test_apply_default_agent.py  test_apply_double_submit_dedup.py  test_apply_dry_run.py  (+276 more)
(+346 files in other folders)
